--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -153,6 +153,7 @@
 "clearing-cache-in-progress" = "Clearing cache in progress.";
 "close-button-accessibility-label" = "Close";
 "compass-direction" = "at $1 o'clock";
+"continue-button-title" = "Continue";
 "continue-reading-empty-description" = "Explore Wikipedia for more articles to read";
 "continue-reading-empty-title" = "No recently read articles";
 "crimean-tatar-variants-alert-body" = "The Wikipedia app now supports the following Crimean Tatar variants as primary or secondary languages within the app, making it easier to read, search and edit in your preferred variants:\n\nQırımtatarca, Latin Crimean Tatar Latin (chr-latn)\nкъырымтатарджа, Кирил Crimean Tatar Cyrillic (crh-cyrl)";
@@ -1096,9 +1097,19 @@
 "watch" = "Watch";
 "watchlist" = "Watchlist";
 "watchlist-filter" = "Filter";
+"watchlist-onboarding-button-title" = "Learn more about the Watchlist";
+"watchlist-onboarding-title" = "Introducing your Watchlist";
 "watchlist-user-button-user-contributions" = "User contributions";
 "watchlist-user-button-user-page" = "User page";
 "watchlist-user-button-user-talk-page" = "User talk page";
+"watchlits-expiration-subtitle" = "Pages remain by default, but options exist for temporary watching ranging from one week to six months.";
+"watchlits-expiration-title" = "Set expiration";
+"watchlits-track-subtitle" = "The Watchlist is a tool that lets you keep track of changes made to pages or articles you're interested in";
+"watchlits-track-title" = "Track changes";
+"watchlits-updates-subtitle" = "The Watchlist of the pages you've added, like edits or discussions, can be accessed via Settings → Account";
+"watchlits-updates-title" = "View updates";
+"watchlits-watch-subtitle" = "By tapping the star or \"Watch\" action in the bottom toolbar of an article, you can add that page to your Watchlist.";
+"watchlits-watch-title" = "Watch articles";
 "welcome-exploration-explore-feed-description" = "Recommended reading and daily articles from our community";
 "welcome-exploration-explore-feed-title" = "Explore feed";
 "welcome-exploration-on-this-day-description" = "Travel back in time to learn what happened today in history";
