Instantiate WatchlistFilterViewModel with localized strings, pass into WKWatchlistViewController

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -445,6 +445,7 @@
 "field-token-title" = "Verification code";
 "field-username-placeholder" = "enter username";
 "field-username-title" = "Username";
+"filter-options-all" = "All";
 "find-clear-button-accessibility" = "Clear find";
 "find-infolabel-number-matches" = "$1 / $2";
 "find-next-button-accessibility" = "Next find result";
@@ -1096,6 +1097,27 @@
 "watch" = "Watch";
 "watchlist" = "Watchlist";
 "watchlist-filter" = "Filter";
+"watchlist-filter-activity-header" = "Watchlist Activity";
+"watchlist-filter-activity-options-seen-changes" = "Seen changes";
+"watchlist-filter-activity-options-unseen-changes" = "Unseen changes";
+"watchlist-filter-automated-contributions-header" = "Automated Contributions";
+"watchlist-filter-automated-contributions-options-bot" = "Bot";
+"watchlist-filter-automated-contributions-options-human" = "Human (not bot)";
+"watchlist-filter-latest-revisions-header" = "Latest Revisions";
+"watchlist-filter-latest-revisions-options-latest-revision" = "Latest revision";
+"watchlist-filter-latest-revisions-options-not-latest-revision" = "Not the latest revision";
+"watchlist-filter-significance-header" = "Significance";
+"watchlist-filter-significance-options-minor-edits" = "Minor edits";
+"watchlist-filter-significance-options-non-minor-edits" = "Non-minor edits";
+"watchlist-filter-type-of-change-header" = "Type of change";
+"watchlist-filter-type-of-change-options-category-changes" = "Category changes";
+"watchlist-filter-type-of-change-options-logged-actions" = "Logged actions";
+"watchlist-filter-type-of-change-options-page-creations" = "Page creations";
+"watchlist-filter-type-of-change-options-page-edits" = "Page edits";
+"watchlist-filter-type-of-change-options-wikidata-edits" = "Wikidata edits";
+"watchlist-filter-user-registration-header" = "User registration and experience";
+"watchlist-filter-user-registration-options-registered" = "Registered";
+"watchlist-filter-user-registration-options-unregistered" = "Unregistered";
 "watchlist-user-button-user-contributions" = "User contributions";
 "watchlist-user-button-user-page" = "User page";
 "watchlist-user-button-user-talk-page" = "User talk page";
