--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -445,6 +445,7 @@
 "field-token-title" = "Title for token field";
 "field-username-placeholder" = "Placeholder text shown inside username field until user taps on it";
 "field-username-title" = "Title for username field {{Identical|Username}}";
+"filter-options-all" = "Common option on filter adjustment views to allow All types in the associated section.";
 "find-clear-button-accessibility" = "Accessibility label for the clear values X button in the find textfield.";
 "find-infolabel-number-matches" = "Displayed to indicate how many matches were found even if no matches. Separator can be customized depending on the language. $1 is replaced with the numerator, $2 is replaced with the denominator.";
 "find-next-button-accessibility" = "Accessibility label for the next button when traversing find results.";
@@ -602,9 +603,9 @@
 "notifications-center-go-to-your-talk-page" = "Button text in Notifications Center that routes to user's talk page.";
 "notifications-center-header-alert-from-agent" = "Subheader text for unknown alert type notifications in Notifications Center. $1 will be replaced with the origin agent of the notification.";
 "notifications-center-inbox-title" = "Navigation bar title text for the inbox view presented from notifications center. Allows for filtering out notifications by Wikimedia project type.";
-"notifications-center-inbox-wikimedia-projects-section-footer" = "Footer of the \"Wikimedia Projects\" section on the notifications center inbox view. This section only lists projects that user has an account at.";
-"notifications-center-inbox-wikimedia-projects-section-title" = "Title of the \"Wikimedia Projects\" section on the notifications center inbox view. This section allows the user to remove other (non-Wikipedia) Wikimedia projects from displaying in their Notifications Center.";
-"notifications-center-inbox-wikipedias-section-title" = "Title of the \"Wikipedias\" section on the notifications center inbox view. This section allows the user to remove certain Wikipedia language projects from displaying in their Notifications Center.";
+"notifications-center-inbox-wikimedia-projects-section-footer" = "Footer of the \"Wikimedia Projects\" section on filter adjustment views. This section only lists projects that user has an account at.";
+"notifications-center-inbox-wikimedia-projects-section-title" = "Title of the \"Wikimedia Projects\" section on filter adjustment views. This section allows the user to filter out other (non-Wikipedia) Wikimedia projects from displaying in their lists.";
+"notifications-center-inbox-wikipedias-section-title" = "Title of the \"Wikipedias\" section on filter adjustment views. This section allows the user to remove certain Wikipedia language projects from displaying in their lists.";
 "notifications-center-language-project-name-format" = "Format used for the ordering of language project name descriptions. This description is inserted into the header text of notifications in Notifications Center. For example, \"English Wikipedia\". Use this format to reorder these words if necessary or insert additional connecting words. Parameters: $1 = localized language name (\"English\"), $2 = localized name for Wikipedia (\"Wikipedia\")";
 "notifications-center-login-notifications" = "Button text in Notifications Center that routes user to login notifications help page in web view.";
 "notifications-center-mark" = "Button text in Notifications Center. Presents menu of options to mark selected notifications as read or unread.";
@@ -1096,6 +1097,27 @@
 "watch" = "Title for watch toolbar button.";
 "watchlist" = "Title for watchlist feature.";
 "watchlist-filter" = "Title for filter button in watchlist.";
+"watchlist-filter-activity-header" = "Header of watchlist filter adjustment view \"Watchlist Activity\" section.";
+"watchlist-filter-activity-options-seen-changes" = "Option in the watchlist filter adjustment view \"Watchlist Activity\" section. When selected, this option only displays seen revisions in the user's watchlist.";
+"watchlist-filter-activity-options-unseen-changes" = "Option in the watchlist filter adjustment view \"Watchlist Activity\" section. When selected, this option only displays unseen revisions in the user's watchlist.";
+"watchlist-filter-automated-contributions-header" = "Header of watchlist filter adjustment view \"Automated Contributions\" section.";
+"watchlist-filter-automated-contributions-options-bot" = "Option in the watchlist filter adjustment view \"Automated Contributions\" section. When selected, this option only displays edits made by bots in the user's watchlist.";
+"watchlist-filter-automated-contributions-options-human" = "Option in the watchlist filter adjustment view \"Automated Contributions\" section. When selected, this option only displays edits made by humans in the user's watchlist.";
+"watchlist-filter-latest-revisions-header" = "Header of watchlist filter adjustment view \"Latest Revisions\" section.";
+"watchlist-filter-latest-revisions-options-latest-revision" = "Option in the watchlist filter adjustment view \"Latest Revisions\" section. When selected, this option only displays the latest revision of a page in the user's watchlist.";
+"watchlist-filter-latest-revisions-options-not-latest-revision" = "Option in the watchlist filter adjustment view \"Latest Revisions\" section. When selected, this option displays multiple revisions of the same page in the user's watchlist.";
+"watchlist-filter-significance-header" = "Header of watchlist filter adjustment view \"Significance\" section.";
+"watchlist-filter-significance-options-minor-edits" = "Option in the watchlist filter adjustment view \"Significance\" section. When selected, this option only displays minor edits in the user's watchlist.";
+"watchlist-filter-significance-options-non-minor-edits" = "Option in the watchlist filter adjustment view \"Significance\" section. When selected, this option only displays non-minor edits in the user's watchlist.";
+"watchlist-filter-type-of-change-header" = "Header of watchlist filter adjustment view \"Type of Change\" section.";
+"watchlist-filter-type-of-change-options-category-changes" = "Option in the watchlist filter adjustment view \"Type of Change\" section. When selected, this option includes category changes in the user's watchlist.";
+"watchlist-filter-type-of-change-options-logged-actions" = "Option in the watchlist filter adjustment view \"Type of Change\" section. When selected, this option includes logged actions in the user's watchlist.";
+"watchlist-filter-type-of-change-options-page-creations" = "Option in the watchlist filter adjustment view \"Type of Change\" section. When selected, this option includes page creations in the user's watchlist.";
+"watchlist-filter-type-of-change-options-page-edits" = "Option in the watchlist filter adjustment view \"Type of Change\" section. When selected, this option includes page edits in the user's watchlist.";
+"watchlist-filter-type-of-change-options-wikidata-edits" = "Option in the watchlist filter adjustment view \"Type of Change\" section. When selected, this option includes wikidata edits in the user's watchlist.";
+"watchlist-filter-user-registration-header" = "Header of watchlist filter adjustment view \"User Registration and Experience\" section.";
+"watchlist-filter-user-registration-options-registered" = "Option in the watchlist filter adjustment view \"User Registration and Experience\" section. When selected, this option only displays registered/non-anonymous edits in the user's watchlist.";
+"watchlist-filter-user-registration-options-unregistered" = "Option in the watchlist filter adjustment view \"User Registration and Experience\" section. When selected, this option only displays unregistered/anonymous edits in the user's watchlist.";
 "watchlist-user-button-user-contributions" = "Title shown for user contributions action in user menu button in diff and watchlist views.";
 "watchlist-user-button-user-page" = "Title shown for user page action in user menu button in diff and watchlist views.";
 "watchlist-user-button-user-talk-page" = "Title shown for user talk page action in user menu button in diff and watchlist views.";
