--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -1105,6 +1105,7 @@
 "watchlist-added-toast-three-months" = "Title in toast after a user successfully adds an article to their watchlist, which expires in three months.";
 "watchlist-change-expiry-option-one-month" = "Title of button in expiry change modal that watches a page for one month.";
 "watchlist-change-expiry-option-one-week" = "Title of button in expiry change modal that watches a page for one week.";
+"watchlist-change-expiry-option-one-year" = "Title of button in expiry change modal that watches a page for one year.";
 "watchlist-change-expiry-option-permanent" = "Title of button in expiry change modal that permanently watches a page.";
 "watchlist-change-expiry-option-six-months" = "Title of button in expiry change modal that watches a page for six months.";
 "watchlist-change-expiry-option-three-months" = "Title of button in expiry change modal that watches a page for three months.";
