Adjust ordering of expiry action sheet presentation

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1096,20 +1096,20 @@
 "variants-alert-preferences-button" = "Review your preferences";
 "watch" = "Watch";
 "watchlist" = "Watchlist";
-"watchlist-added-toast-change-expiration" = "Change expiration date?";
 "watchlist-added-toast-one-month" = "Added to Watchlist for 1 month.";
 "watchlist-added-toast-one-week" = "Added to Watchlist for 1 week.";
 "watchlist-added-toast-one-year" = "Added to Watchlist for 1 year.";
 "watchlist-added-toast-permanently" = "Added to Watchlist permanently.";
 "watchlist-added-toast-six-months" = "Added to Watchlist for 6 months.";
 "watchlist-added-toast-three-months" = "Added to Watchlist for 3 months.";
+"watchlist-added-toast-view-watchlist" = "View Watchlist";
 "watchlist-change-expiry-option-one-month" = "1 month";
 "watchlist-change-expiry-option-one-week" = "1 week";
 "watchlist-change-expiry-option-one-year" = "1 year";
 "watchlist-change-expiry-option-permanent" = "Permanent";
 "watchlist-change-expiry-option-six-months" = "6 months";
 "watchlist-change-expiry-option-three-months" = "3 months";
-"watchlist-change-expiry-subtitle" = "Change Watchlist time period";
+"watchlist-change-expiry-subtitle" = "Choose Watchlist time period";
 "watchlist-change-expiry-title" = "Watchlist expiry";
 "watchlist-filter" = "Filter";
 "watchlist-removed" = "Removed from your watchlist";
