--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -1096,20 +1096,20 @@
 "variants-alert-preferences-button" = "Action button on alert used to inform users about variant support.";
 "watch" = "Title for watch toolbar button.";
 "watchlist" = "Title for watchlist feature.";
-"watchlist-added-toast-change-expiration" = "Title in toast after a user successfully adds an article to their watchlist. Tapping will allow them to change their watchlist item expiration date.";
 "watchlist-added-toast-one-month" = "Title in toast after a user successfully adds an article to their watchlist, which expires in one month.";
 "watchlist-added-toast-one-week" = "Title in toast after a user successfully adds an article to their watchlist, which expires in one week.";
 "watchlist-added-toast-one-year" = "Title in toast after a user successfully adds an article to their watchlist, which expires in 1 year.";
 "watchlist-added-toast-permanently" = "Title in toast after a user successfully adds an article to their watchlist, with no expiration.";
 "watchlist-added-toast-six-months" = "Title in toast after a user successfully adds an article to their watchlist, which expires in 6 months.";
 "watchlist-added-toast-three-months" = "Title in toast after a user successfully adds an article to their watchlist, which expires in three months.";
+"watchlist-added-toast-view-watchlist" = "Button in toast after a user successfully adds an article to their watchlist. Tapping will take them to their watchlist.";
 "watchlist-change-expiry-option-one-month" = "Title of button in expiry change modal that watches a page for one month.";
 "watchlist-change-expiry-option-one-week" = "Title of button in expiry change modal that watches a page for one week.";
 "watchlist-change-expiry-option-one-year" = "Title of button in expiry change modal that watches a page for one year.";
 "watchlist-change-expiry-option-permanent" = "Title of button in expiry change modal that permanently watches a page.";
 "watchlist-change-expiry-option-six-months" = "Title of button in expiry change modal that watches a page for six months.";
 "watchlist-change-expiry-option-three-months" = "Title of button in expiry change modal that watches a page for three months.";
-"watchlist-change-expiry-subtitle" = "Subtitle in modal that allows a user to change the expiry setting of a page they are watching.";
+"watchlist-change-expiry-subtitle" = "Subtitle in modal that allows a user to choose the expiry setting of a page they are watching.";
 "watchlist-change-expiry-title" = "Title of modal that allows a user to change the expiry setting of a page they are watching.";
 "watchlist-filter" = "Title for filter button in watchlist.";
 "watchlist-removed" = "Title in toast after a user successfully removes an article from their watchlist.";
