Add missing word

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1096,12 +1096,12 @@
 "variants-alert-preferences-button" = "Review your preferences";
 "watch" = "Watch";
 "watchlist" = "Watchlist";
-"watchlist-added-toast-one-month" = "Added to Watchlist for 1 month.";
-"watchlist-added-toast-one-week" = "Added to Watchlist for 1 week.";
-"watchlist-added-toast-one-year" = "Added to Watchlist for 1 year.";
-"watchlist-added-toast-permanently" = "Added to Watchlist permanently.";
-"watchlist-added-toast-six-months" = "Added to Watchlist for 6 months.";
-"watchlist-added-toast-three-months" = "Added to Watchlist for 3 months.";
+"watchlist-added-toast-one-month" = "Added to your Watchlist for 1 month.";
+"watchlist-added-toast-one-week" = "Added to your Watchlist for 1 week.";
+"watchlist-added-toast-one-year" = "Added to your Watchlist for 1 year.";
+"watchlist-added-toast-permanently" = "Added to your Watchlist permanently.";
+"watchlist-added-toast-six-months" = "Added to your Watchlist for 6 months.";
+"watchlist-added-toast-three-months" = "Added to your Watchlist for 3 months.";
 "watchlist-added-toast-view-watchlist" = "View Watchlist";
 "watchlist-change-expiry-option-one-month" = "1 month";
 "watchlist-change-expiry-option-one-week" = "1 week";
