--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -1095,6 +1095,8 @@
 "variants-alert-preferences-button" = "Action button on alert used to inform users about variant support.";
 "watch" = "Title for watch toolbar button.";
 "watchlist" = "Title for watchlist feature.";
+"watchlist-byte" = "Displayed in watchlist view to indicate a single or no byte change in a revision.";
+"watchlist-bytes" = "Displayed in watchlist view to indicate many byte changes in a revision.";
 "watchlist-filter" = "Title for filter button in watchlist.";
 "watchlist-user-button-user-contributions" = "Title shown for user contributions action in user menu button in diff and watchlist views.";
 "watchlist-user-button-user-page" = "Title shown for user page action in user menu button in diff and watchlist views.";
