--- a/Wikipedia/iOS Native Localizations/bg.lproj/Localizable.stringsdict
+++ b/Wikipedia/iOS Native Localizations/bg.lproj/Localizable.stringsdict
@@ -20,6 +20,24 @@
 			<string>знака</string>
 		</dict>
 	</dict>
+	<key>aaald-small-change-description</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@v1@</string>
+		<key>v1</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$d малка промяна</string>
+			<key>other</key>
+			<string>%1$d малки промени</string>
+			<key>zero</key>
+			<string>Няма малки промени</string>
+		</dict>
+	</dict>
 	<key>diff-paragraph-moved-distance-line</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
