--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -1096,6 +1096,7 @@
 "watch" = "Title for watch toolbar button.";
 "watchlist" = "Title for watchlist feature.";
 "watchlist-byte" = "Displayed in watchlist view to indicate a single or no byte change in a revision.";
+"watchlist-byte-change" = "Amount of bytes changed for a revision displayed in watchlist - $1 is replaced with the number of bytes.";
 "watchlist-bytes" = "Displayed in watchlist view to indicate many byte changes in a revision.";
 "watchlist-filter" = "Title for filter button in watchlist.";
 "watchlist-user-button-user-contributions" = "Title shown for user contributions action in user menu button in diff and watchlist views.";
