Xcode 15 - Fix navigation controller crashes
- No longer sharing UINavigationitem with multiple UINavigationBars
- Added UINavigationItem helper method to properly set up back button on some views
- Using helper method to fix missing long press back title on Notifications Center Detail view

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -576,6 +576,7 @@
 "notifications-center-checking-for-notifications" = "Checking for notifications...";
 "notifications-center-destination-app" = "In app";
 "notifications-center-destination-web" = "On web";
+"notifications-center-detail-title" = "Notification Detail";
 "notifications-center-empty-checking-for-notifications" = "Checking for notifications...";
 "notifications-center-empty-no-messages" = "You have no messages";
 "notifications-center-empty-not-subscribed" = "You are not currently subscribed to any Wikipedia Notifications";
