--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1115,20 +1115,20 @@
 "watchlist-change-expiry-option-three-months" = "3 months";
 "watchlist-change-expiry-subtitle" = "Choose Watchlist time period";
 "watchlist-change-expiry-title" = "Watchlist expiry";
-"watchlist-expiration-subtitle" = "Pages remain by default, but options exist for temporary watching ranging from one week to one year";
+"watchlist-expiration-subtitle" = "Pages remain by default, but options exist for temporary watching ranging from one week to one year.";
 "watchlist-expiration-title" = "Set expiration";
 "watchlist-filter" = "Filter";
 "watchlist-onboarding-button-title" = "Learn more about the Watchlist";
 "watchlist-onboarding-title" = "Introducing your Watchlist";
 "watchlist-removed" = "Removed from your Watchlist";
-"watchlist-track-subtitle" = "The Watchlist is a tool that lets you keep track of changes made to pages or articles you're interested in";
+"watchlist-track-subtitle" = "The Watchlist is a tool that lets you keep track of changes made to pages or articles you're interested in.";
 "watchlist-track-title" = "Track changes";
-"watchlist-updates-subtitle" = "The Watchlist of the pages you've added, like edits or discussions, can be accessed via Settings → Account";
+"watchlist-updates-subtitle" = "The Watchlist of the pages you've added, like edits or discussions, can be accessed via Settings → Account.";
 "watchlist-updates-title" = "View updates";
 "watchlist-user-button-user-contributions" = "User contributions";
 "watchlist-user-button-user-page" = "User page";
 "watchlist-user-button-user-talk-page" = "User talk page";
-"watchlist-watch-subtitle" = "By tapping the star or \"Watch\" action in the bottom toolbar of an article, you can add that page to your Watchlist";
+"watchlist-watch-subtitle" = "By tapping the star or \"Watch\" action in the bottom toolbar of an article, you can add that page to your Watchlist.";
 "watchlist-watch-title" = "Watch articles";
 "welcome-exploration-explore-feed-description" = "Recommended reading and daily articles from our community";
 "welcome-exploration-explore-feed-title" = "Explore feed";
