--- a/Wikipedia/iOS Native Localizations/tcy.lproj/Localizable.stringsdict
+++ b/Wikipedia/iOS Native Localizations/tcy.lproj/Localizable.stringsdict
@@ -813,5 +813,21 @@
 			<string>%1$d bytes</string>
 		</dict>
 	</dict>
+	<key>watchlist-number-filters</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@v1@</string>
+		<key>v1</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$d filter</string>
+			<key>other</key>
+			<string>%1$d filters</string>
+		</dict>
+	</dict>
 </dict>
 </plist>
