--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -1072,6 +1072,7 @@
 "unable-to-load-talk-page-title" = "Text for placeholder label visible when talk page can't be loaded";
 "unknown-generic-text" = "Default text used in places where no contextual information is provided";
 "unwatch" = "Title for unwatch toolbar button.";
+"user-titke" = "Text for user in the app";
 "uzbek-variants-alert-body" = "Body text of alert used to inform users about Uzbek variant support. Please do not translate the newlines (\n) or Uzbek characters (ўзбекча кирилл, etc.).";
 "uzbek-variants-alert-title" = "Title of alert used to inform users about Uzbek variant support.";
 "vanish-account-additional-information-field" = "Title for the additional information form field";
@@ -1116,6 +1117,7 @@
 "watchlist-change-expiry-option-three-months" = "Title of button in expiry change modal that watches a page for three months.";
 "watchlist-change-expiry-subtitle" = "Subtitle in modal that allows a user to choose the expiry setting of a page they are watching.";
 "watchlist-change-expiry-title" = "Title of modal that allows a user to change the expiry setting of a page they are watching.";
+"watchlist-edit-summary-accessibility" = "Text for edit summary acessibility text";
 "watchlist-empty-view-button-title" = "Title for empty watchlist view button that redirects user to search articles";
 "watchlist-empty-view-filter-title" = "Title for empty watchlist view when filters are active";
 "watchlist-empty-view-subtitle" = "Subtitle for empty watchlist view";
