--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -238,6 +238,21 @@
 "diff-unedited-lines-format" = "{{PLURAL:$1|$1 line unedited|$1 lines unedited}}";
 "diff-user-button-accessibility-text" = "Double tap to open menu";
 "dim-images" = "Dim images";
+"donate-accessibility-amount-button-hint" = "Double tap to select donation amount.";
+"donate-accessibility-donate-hint-format" = "Double tap to donate $1 to the Wikimedia Foundation.";
+"donate-accessibility-email-opt-in-hint" = "Double tap to give the Wikimedia Foundation permission to email you.";
+"donate-accessibility-keyboard-done-hint" = "Double tap to dismiss amount input keyboard view.";
+"donate-accessibility-textfield-hint" = "Enter custom amount to donate.";
+"donate-accessibility-transaction-fee-hint" = "Double tap to add transaction fee to donation amount.";
+"donate-email-opt-in-text" = "Yes, the Wikimedia Foundation can send me an occasional email.";
+"donate-help-frequently-asked-questions" = "Frequently asked questions";
+"donate-help-other-ways-to-give" = "Other ways to give";
+"donate-help-problems-donating" = "Problems donating?";
+"donate-help-tax-deductibility-information" = "Tax deductibility information";
+"donate-maximum-error-text" = "We cannot accept donations greater than $1 $2 through our website. Please contact our major gifts staff at benefactors@wikimedia.org.";
+"donate-minimum-error-text" = "Please select an amount (minimum $1 $2).";
+"donate-title" = "Select an amount";
+"donate-transaction-fee-opt-in-text" = "I’ll generously add $1 to cover the transaction fees so you can keep 100 percent of my donation.";
 "edit-bold-accessibility-label" = "Add bold formatting";
 "edit-bold-remove-accessibility-label" = "Remove bold formatting";
 "edit-clear-formatting-accessibility-label" = "Remove formatting";
