--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -251,6 +251,8 @@
 "donate-help-tax-deductibility-information" = "Tax deductibility information";
 "donate-maximum-error-text" = "We cannot accept donations greater than $1 $2 through our website. Please contact our major gifts staff at benefactors@wikimedia.org.";
 "donate-minimum-error-text" = "Please select an amount (minimum $1 $2).";
+"donate-success-subtitle" = "Your generosity to Wikipedia means so much to us.";
+"donate-success-title" = "Thank you!";
 "donate-title" = "Select an amount";
 "donate-transaction-fee-opt-in-text" = "I’ll generously add $1 to cover the transaction fees so you can keep 100 percent of my donation.";
 "edit-bold-accessibility-label" = "Add bold formatting";
