--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -197,7 +197,7 @@
 "description-welcome-descriptions-title" = "Title text explaining article descriptions";
 "description-welcome-promise-title" = "Title text asking user to edit descriptions responsibly";
 "description-welcome-start-editing-button" = "Text for button for dismissing description editing welcome screens";
-"diff-article-revision-history" = "Label for article edit history menu item in diff more menu.";
+"diff-article-edit-history" = "Label for article edit history menu item in diff more menu.";
 "diff-compare-header-from-info-heading" = "Heading label in info box for previous revision when comparing two revisions.";
 "diff-compare-header-heading" = "Heading label in header when comparing two revisions.";
 "diff-compare-header-to-info-heading" = "Heading label in info box for current revision when comparing two revisions.";
@@ -242,6 +242,7 @@
 "donate-accessibility-donate-hint-format" = "Accessibility hint on donate form Apple Pay button for screen readers. Parameters: * $1 - the donation amount entered by the user.";
 "donate-accessibility-email-opt-in-hint" = "Accessibility hint on donate form email opt in checkbox for screen readers.";
 "donate-accessibility-keyboard-done-hint" = "Accessibility hint on donate form keyboard done button for screen readers.";
+"donate-accessibility-monthly-recurring-hint" = "Accessibility hint on donate form monthly recurring checkbox for screen readers.";
 "donate-accessibility-textfield-hint" = "Accessibility hint on donate form custom amount textfield for screen readers.";
 "donate-accessibility-transaction-fee-hint" = "Accessibility hint on donate form transaction fee checkbox for screen readers.";
 "donate-email-opt-in-text" = "Text next to email opt-in checkbox on donate form.";
@@ -251,10 +252,7 @@
 "donate-help-tax-deductibility-information" = "Help link at the bottom of the donate form, that takes user to a web view link with more info.";
 "donate-maximum-error-text" = "Error text displayed when user enters donation amount above the maximum. Parameters: * $1 - the currency code, $2 - the maximum donation amount allowed. (For example, 'USD $25,000')";
 "donate-minimum-error-text" = "Error text displayed when user enters donation amount below the allowed minimum. Parameters: * $1 - the minimum amount allowed, $2 - the currency code. (For example, '$1 USD')";
-"donate-payment-method-prompt-apple-pay-button-title" = "Title of Apple Pay button choice in donate payment method prompt.";
-"donate-payment-method-prompt-message" = "Message of prompt to user asking which payment method they want to donate with.";
-"donate-payment-method-prompt-other-button-title" = "Title of Other payment method button choice in donate payment method prompt.";
-"donate-payment-method-prompt-title" = "Title of prompt to user asking which payment method they want to donate with.";
+"donate-monthly-recurring-text" = "Text next to monthly recurring checkbox on donate form.";
 "donate-success-subtitle" = "Thank you toast subtitle displayed after a user successfully donates.";
 "donate-success-title" = "Thank you toast title displayed after a user successfully donates.";
 "donate-title" = "Title for donate form.";
@@ -942,7 +940,6 @@
 "settings-clear-cache-are-you-sure-title" = "Title for the confirmation presented to the user to verify they are sure they want to clear clear cached data.";
 "settings-clear-cache-cancel" = "Cancel action to clear cached data {{Identical|Cancel}}";
 "settings-clear-cache-ok" = "Confirm action to clear cached data";
-"settings-donate" = "Title for button letting user make a donation.";
 "settings-help-and-feedback" = "Title for showing showing a screen that displays the FAQ and allows users to submit bug reports";
 "settings-language-bar" = "Title in Settings for toggling the display the language bar in the search view";
 "settings-languages-feed-customization" = "Explanation of how you can manage which languages appear in the feed.";
@@ -1094,7 +1091,6 @@
 "unable-to-load-talk-page-title" = "Text for placeholder label visible when talk page can't be loaded";
 "unknown-generic-text" = "Default text used in places where no contextual information is provided";
 "unwatch" = "Title for unwatch toolbar button.";
-"user-title" = "Text that refers to a user in the app";
 "uzbek-variants-alert-body" = "Body text of alert used to inform users about Uzbek variant support. Please do not translate the newlines (\n) or Uzbek characters (ўзбекча кирилл, etc.).";
 "uzbek-variants-alert-title" = "Title of alert used to inform users about Uzbek variant support.";
 "vanish-account-additional-information-field" = "Title for the additional information form field";
@@ -1139,8 +1135,6 @@
 "watchlist-change-expiry-option-three-months" = "Title of button in expiry change modal that watches a page for three months.";
 "watchlist-change-expiry-subtitle" = "Subtitle in modal that allows a user to choose the expiry setting of a page they are watching.";
 "watchlist-change-expiry-title" = "Title of modal that allows a user to change the expiry setting of a page they are watching.";
-"watchlist-diff-action-button-title" = "Title for watchlist menu button item for go to diff action";
-"watchlist-edit-summary-accessibility" = "Text for edit summary acessibility text";
 "watchlist-empty-view-button-title" = "Title for empty watchlist view button that redirects user to search articles";
 "watchlist-empty-view-filter-title" = "Title for empty watchlist view when filters are active";
 "watchlist-empty-view-subtitle" = "Subtitle for empty watchlist view";
